<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/tablet_menu_icons">
        <!-- TODO : remove the delete function -->
        <item
            android:id="@+id/delete_estate"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="Supprimer tout"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/switch_currency"
            android:icon="@drawable/ic_euro_black_24"
            android:title="@string/switch_currency_title"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/edit_estate"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/main_menu_filter_icon"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/geoloc_estate"
            android:icon="@drawable/ic_location_black_24dp"
            android:title="@string/main_menu_geoloc_icon"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/filter_estate"
            android:icon="@drawable/ic_filter_list_black_24dp"
            android:title="@string/main_menu_filter_icon"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/loan_simulator"
            android:icon="@drawable/ic_loan_dark_24"
            android:title="@string/loan_menu_item_title"
            app:showAsAction="ifRoom" />
    </group>
</menu>
