<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/loanToolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loanToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium">

            <TextView
                android:id="@+id/estatePriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estate_price"
                style="@style/LoanTitle"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorSecondaryDark"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/estatePriceValue"/>

            <TextView
                android:id="@+id/estatePriceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LoanTitle"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorSecondaryDark"
                tools:text="600000€"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/estatePriceTitle"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/separator"
                style="@style/LoanTitle"
                android:background="@color/lightGray"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/estatePriceValue" />

            <TextView
                android:id="@+id/loanAmountTitle"
                style="@style/LoanTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/loan_amount_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator" />

            <TextView
                android:id="@+id/loanAmount"
                style="@style/LoanPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/loanAmountTitle"
                tools:text="250000 €" />

            <SeekBar
                android:id="@+id/loanAmountSeekbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/medium"
                app:layout_constraintTop_toBottomOf="@id/loanAmountTitle" />

            <TextView
                android:id="@+id/loanDurationTitle"
                style="@style/LoanTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x_large"
                android:text="@string/loan_duration_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loanAmountSeekbar" />

            <TextView
                android:id="@+id/loanDuration"
                style="@style/LoanPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/loanDurationTitle"
                tools:text="20 ans" />

            <SeekBar
                android:id="@+id/loanDurationSeekbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/medium"
                android:progress="15"
                app:layout_constraintTop_toBottomOf="@id/loanDurationTitle" />

            <TextView
                android:id="@+id/loanRateTitle"
                style="@style/CategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x_large"
                android:text="@string/loan_rate_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loanDurationSeekbar" />

            <TextView
                android:id="@+id/loanRate"
                style="@style/LoanRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                app:layout_constraintBaseline_toBaselineOf="@id/loanRateTitle"
                app:layout_constraintStart_toEndOf="@id/loanRateTitle"
                tools:text="1,00%" />

            <TextView
                android:id="@+id/loanInsuranceTitle"
                style="@style/CategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:text="@string/loan_insurance_rate_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loanRateTitle" />

            <TextView
                android:id="@+id/loanInsuranceRate"
                style="@style/LoanRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                app:layout_constraintBaseline_toBaselineOf="@id/loanInsuranceTitle"
                app:layout_constraintStart_toEndOf="@id/loanInsuranceTitle"
                tools:text="0,34%" />

            <TextView
                android:id="@+id/loanBankTitle"
                style="@style/CategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:text="@string/loan_bank_cost_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loanInsuranceTitle" />

            <TextView
                android:id="@+id/loanBankFees"
                style="@style/LoanRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                app:layout_constraintBaseline_toBaselineOf="@id/loanBankTitle"
                app:layout_constraintStart_toEndOf="@id/loanBankTitle"
                tools:text="34 000 $" />

            <TextView
                android:id="@+id/loanDepositTitle"
                style="@style/CategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:text="@string/loan_deposit_amount_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loanBankTitle" />

            <TextView
                android:id="@+id/loanDeposit"
                style="@style/LoanRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                app:layout_constraintBaseline_toBaselineOf="@id/loanDepositTitle"
                app:layout_constraintStart_toEndOf="@id/loanDepositTitle"
                tools:text="25 000 $" />

            <TextView
                android:id="@+id/loanResultTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xxx_large"
                android:text="@string/loan_monthly_coast_title"
                android:textSize="@dimen/text_x_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loanDepositTitle" />

            <View
                android:id="@+id/separator2"
                style="@style/LoanTitle"
                android:background="@color/lightGray"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loanDepositTitle"
                app:layout_constraintBottom_toTopOf="@id/loanResult"/>

            <TextView
                android:id="@+id/loanResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="@dimen/text_x_large"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/loanResultTitle"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="3200 $" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


